# tree-sitter-wannier90

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-wannier90.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_wannier90/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterWannier90/: wannier90.h
docs/: helix.md
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: atoms_frac.txt  comment.txt  kpoint_path.txt  kpoints.txt  pair.txt  projections.txt  unit_cell_cart.txt
